--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,19 +19,59 @@
         <ImageView
 
             android:id="@+id/iv_jpg"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:background="@drawable/kelajak" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/la_anim1"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:scaleType="centerCrop"
             android:layout_marginBottom="10dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_fileName="loading.json" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bt_bounce"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="2dp"
+                android:background="#3F51B5"
+                android:text="BOUNCE"
+                app:backgroundTint="@null" />
+
+            <Button
+                android:id="@+id/bt_sequential"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:textSize="11sp"
+                android:layout_marginStart="15dp"
+                android:background="#3F51B5"
+                android:text="SEQUENTIAL"
+                app:backgroundTint="@null" />
+
+            <Button
+                android:id="@+id/bt_togather"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:textSize="13sp"
+                android:layout_marginStart="15dp"
+                android:background="#3F51B5"
+                android:text="TOGATHER"
+                app:backgroundTint="@null" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,6 +167,7 @@
                 android:id="@+id/bt_play"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
+
                 android:layout_marginStart="10dp"
                 android:background="#F44336"
                 android:text="Play"
